Update Analysis Air Quality and Asthma

--- a/Analysis_AirQuality_and_Asthma.ipynb
+++ b/Analysis_AirQuality_and_Asthma.ipynb
@@ -1072,11 +1072,15 @@
     "### Correlation between PM25 concentration and prevalence of asthma\n",
     "We first look at the overall correlation by pulling the data for PM25 and asthma for all countries and all years at once.\n",
     "\n",
-    "- The graph below is showing a negative correlation between PM2.5 (particulate matter with a diameter of 2.5 micrometers or less) and asthma prevalence in countries from 2015 to 2021, it suggests that as the levels of PM2.5 increase, the prevalence of asthma tends to decrease.\n",
+    "- The graph below is showing a negative correlation between PM2.5 (particulate matter with a diameter of 2.5 micrometers or less) and asthma prevalence in countries from 2015 to 2019, it suggests that as the levels of PM2.5 increase, the prevalence of asthma tends to decrease.\n",
     "\n",
     "- Factors that may affect this could be:\n",
     "    - varying air quality regulations, differences in healthcare and reporting, socioeconomic factors, regional varations.\n",
-    "    - Example: Countries with better healthcare infrastructure and higher awareness about asthma might have more accurate and comprehensive reporting of asthma cases. This could result in higher recorded asthma prevalence rates even if the air quality is relatively better."
+    "    - Example: Countries with better healthcare infrastructure and higher awareness about asthma might have more accurate and comprehensive reporting of asthma cases. This could result in higher recorded asthma prevalence rates even if the air quality is relatively better.\n",
+    "\n",
+    "- The Pearson correlation coefficient, measures the strength and direction of the linear relationship between two variables. In this case, the R-value of -0.51 indicates a **moderate negative correlation** between the variables \"Asthma\" and \"PM25.\" The negative sign implies that as the value of PM25 increases, the value of Asthma tends to decrease.\n",
+    "\n",
+    "- Overall, the provided information suggests that there is a moderate negative correlation between Asthma and PM25, and the linear model implies that higher levels of PM25 are associated with lower values of Asthma based on the regression analysis."
    ]
   },
   {
@@ -1133,7 +1137,10 @@
    "metadata": {},
    "source": [
     "### Analysis:\n",
-    "-"
+    "- Based on the box and whiskers below, we can draw from the PM25 plot that the air quality over the years from 2015-2019 has slowly and gradually increased in variation - with the data being more consistent in 2015 and gradually varying from 2016 and onwards. The box plots comparatively get larger/taller in the following years, after 2015.\n",
+    "- Looking at the boxes in Asthma and PM25 for the year 2015, we can see that the data's range is more consistent and condensed in this particular year.\n",
+    "- When comparing the median for asthma prevalence between the different boxes in the Asthma plot, we can see that the Median remains overall consistent through the years and close to the average, varying only slightly. Hovering at around 4. Although the data is widely distributed.\n",
+    "- If we compare the changes in the PM25 box plot in regards to the median, the median will slightly fluctuate over the years, but remain between the 55-65 range. \n"
    ]
   },
   {
@@ -1216,6 +1223,7 @@
     }
    ],
    "source": [
+    "# Plotting countries for PM25 to see how they range\n",
     "country = 'Australia'\n",
     "country_df = analysis_df.loc[analysis_df['Country']==country,:]\n",
     "\n",
@@ -1227,6 +1235,18 @@
     "country_df.plot.line('Year','PM25',label=country)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Key Question:\n",
+    "### Does a country’s air quality have an impact on the asthma prevalence?\n",
+    "\n",
+    "- Based on the data gathered and analysis conducted in this project - and if drawing a conclusion only made from this analysis - we would gather that there is a **moderately negative correlation** between air quality having an impact on the prevalence of asthma in countries. Meaning as air quality worsens - the asthma prevalence improves. We can conclude that there may be other varying factors and variables outside of these that may have affected the results. Some of which can include the varying air quality regulations in different countries, the differences in healthcare and reporting, socio-economic factors, etc. \n",
+    "\n",
+    "- If we look at Bangladesh and Nepal for example, both placing in the bottom tier of air quality, and high (better) tier for Asthma prevalence. We can interpret this data and assume that these countries' socio-economic factors, and as well as health care reporting and air quality regulations can have an implication on the results. Doing this analysis was very interesting, as we expected the data to demonstrate differently, but given external factors, it's reported a **moderately negative correlation**.\n"
    ]
   }
  ],
