Remove unused files and directories. Update README file with quick start guide. Update relative path in some cleaning files. Check cleaning files for US data and air quality

--- a/Cleaning_Hospitalisations_US_States.ipynb
+++ b/Cleaning_Hospitalisations_US_States.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "23290483",
    "metadata": {},
    "outputs": [
@@ -94,14 +94,16 @@
        "4          4  Arizona  2019  2,960           NaN         NaN"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "csv_file = r'Data_Sources/Annual Asthma Hospitalizations (per year and state in USA. 2015-2021).csv'\n",
+    "from pathlib import Path\n",
+    "\n",
+    "csv_file = Path('Data_Sources/Annual Asthma Hospitalizations (per year and state in USA. 2015-2021).csv')\n",
     "\n",
     "# Use pandas to read the CSV file into a DataFrame\n",
     "hospital_df = pd.read_csv(csv_file)\n",
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "456eba19",
    "metadata": {},
    "outputs": [
@@ -186,7 +188,7 @@
        "4  Arizona  2019  2,960"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,12 +196,12 @@
    "source": [
     "#delete columns 'StateFIPS', 'Data Comment'. 'Unnamed:5'\n",
     "hospital_df.drop(['StateFIPS', 'Data Comment', 'Unnamed: 5'], axis=1, inplace=True)\n",
-    "hospital_df.head()\n"
+    "hospital_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "9f35d262",
    "metadata": {},
    "outputs": [
@@ -273,7 +275,7 @@
        "4  Arizona  2019                   2,960"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "e766b080",
    "metadata": {},
    "outputs": [
@@ -405,7 +407,7 @@
        "[176 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,24 +418,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "43601827",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned_hospital_df = 'cleaned_hospitalisations.csv'\n",
+    "output_file = Path('Cleaned_Datasets/cleaned_hospitalisations.csv')\n",
     "\n",
     "#export the DataFrame as a CSV file\n",
-    "hospital_df.to_csv(cleaned_hospital_df, index=False)"
+    "hospital_df.to_csv(output_file, index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec813000",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
