--- a/Cleaning_AirQuality_US_States.ipynb
+++ b/Cleaning_AirQuality_US_States.ipynb
@@ -1309,9 +1309,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_2544\\1426095199.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  us_airquality_df.loc[index,'State'] = get_state(index)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1434,7 +1446,7 @@
        "[903 rows x 3 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
