Add comments to life expectancy analysis file

--- a/Analysis_AirQuality_and_Life_Expectancy.ipynb
+++ b/Analysis_AirQuality_and_Life_Expectancy.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9a38de9d",
+   "metadata": {},
+   "source": [
+    "# Analysis: air quality and life expectancy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "8be871c9",
@@ -17,6 +25,14 @@
     "\n",
     "# Dependencies (local modules)\n",
     "from countries import get_country"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "743fdf63",
+   "metadata": {},
+   "source": [
+    "## Import CSV files into DataFrames"
    ]
   },
   {
@@ -472,6 +488,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4dd8c009",
+   "metadata": {},
+   "source": [
+    "# Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48097fbe",
+   "metadata": {},
+   "source": [
+    "## Top 10 countries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e5be7a6",
+   "metadata": {},
+   "source": [
+    "### Air quality"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "ae196699",
@@ -591,6 +631,14 @@
     "#Top 10 countries with the best air quality (based on PM25)\n",
     "analysis_sorted_by_PM25 = air_life_analysis_df.sort_values('PM25', ascending=True)\n",
     "analysis_sorted_by_PM25[['Country','Year','PM25']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfde850d",
+   "metadata": {},
+   "source": [
+    "### Life expectancy"
    ]
   },
   {
@@ -716,6 +764,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8705a714",
+   "metadata": {},
+   "source": [
+    "## Bottom 10 countries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64ff0538",
+   "metadata": {},
+   "source": [
+    "### Air quality"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "b2f329c5",
@@ -835,6 +899,14 @@
     "#Bottom 10 countries with the lowest air quality (based on PM25)\n",
     "analysis_sorted_by_PM25 = air_life_analysis_df.sort_values('PM25', ascending=False)\n",
     "analysis_sorted_by_PM25[['Country','Year','PM25']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4585c1dd",
+   "metadata": {},
+   "source": [
+    "### Life expectancy"
    ]
   },
   {
@@ -960,6 +1032,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "235593fd",
+   "metadata": {},
+   "source": [
+    "## Correlation between PM25 concentration and Life Expectancy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "017ab194",
@@ -985,7 +1065,6 @@
     }
    ],
    "source": [
-    "#Correlation between PM25 concentration and Life Expectancy.\n",
     "#Show a scatter plot of PM25 versus Life Expectancy prevalence for all countries and all years.\n",
     "air_life_analysis_df.plot.scatter(x='PM25',y='Life Expectancy', figsize=(8,5))\n",
     "\n",
@@ -1020,24 +1099,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0800786f",
+   "metadata": {},
+   "source": [
+    "## Changes of air quality and life expectancy over the years"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "a7f52dbd",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[2015, 2016, 2017, 2018, 2019, 2020]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'air_life_analysis_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Display the years from the DataFrame\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m year_list \u001b[39m=\u001b[39m air_life_analysis_df[\u001b[39m'\u001b[39m\u001b[39mYear\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39munique()\u001b[39m.\u001b[39mtolist()\n\u001b[0;32m      3\u001b[0m year_list\u001b[39m.\u001b[39msort()\n\u001b[0;32m      5\u001b[0m year_list\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'air_life_analysis_df' is not defined"
+     ]
     }
    ],
    "source": [
-    "#Changes of air quality and asthma over the years\n",
+    "# Display the years from the DataFrame\n",
     "year_list = air_life_analysis_df['Year'].unique().tolist()\n",
     "year_list.sort()\n",
     "\n",
@@ -1076,6 +1164,21 @@
    "source": [
     "On the Life Expectancy box plot you can see that between 2015 - 2018 we have similar sample size and the median age around 78-79 however in 2019-2020 there is a decline in the median age to 76-77 period where this has caused a reduction of the median age and you can see also a couple of outlier in each of 2017 & 2018 dataset.\n",
     "For PM25 box plot shows a steady around 50-62 micrograms between 2015-2020 a slight decrease in the country analysed in 2019-2020 and from this you can see several outlier in each of the year."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cff0964",
+   "metadata": {},
+   "source": [
+    "## Air quality Index\n",
+    "In this section we convert the pollution level (concentration of PM 2.5) to an air quality index based on the following criteria:\n",
+    "- PM2.5 between 0 and 12 micrograms/m3 = Good air quality level\n",
+    "- PM2.5 between 12.1 and 35.4 micrograms/m3 = Moderate air quality level\n",
+    "- PM2.5 between 35.5 and 55.4 micrograms/m3 = Unhealthy air quality level for Sensitive Groups (SG)\n",
+    "- PM2.5 between 55.5 and 150.4 micrograms/m3 = Unhealthy air quality level\n",
+    "- PM2.5 between 150.5 and 250.4 micrograms/m3 = Very Unhealthy air quality level\n",
+    "- PM2.5 higher than 250.5 micrograms/m3 = Hazardous air quality level"
    ]
   },
   {
@@ -1599,6 +1702,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca1903d6",
+   "metadata": {},
+   "source": [
+    "## Comparison between specific countries (Switzerland and Indonesia)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "id": "e9fd5cbf",
@@ -1999,7 +2110,7 @@
    "id": "0ffacbfc",
    "metadata": {},
    "source": [
-    "CONCLUSION\n",
+    "# Conclusion\n",
     "\n",
     "We can see from the above analysis and graphs that countries with good and moderate categories which has low level of PM25 live much longer than countries with higher PM25. \n",
     "\n",
