--- a/Cleaning_Happiness_Index.ipynb
+++ b/Cleaning_Happiness_Index.ipynb
@@ -867,7 +867,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bootcamp1",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -882,8 +882,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.11"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
