End to end test completed. Fixed path issues. Minor edit in README.

--- a/Cleaning_Happiness_Index.ipynb
+++ b/Cleaning_Happiness_Index.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "4     0.45811            2.45176  "
       ]
      },
-     "execution_count": 443,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "4       Canada               5            7.427"
       ]
      },
-     "execution_count": 444,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "4                        0.41004     0.25492            2.82596  "
       ]
      },
-     "execution_count": 445,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "4      Finland               5            7.413"
       ]
      },
-     "execution_count": 446,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "4    0.245483                       0.382612           2.430182  "
       ]
      },
-     "execution_count": 447,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "4      Finland               5            7.469"
       ]
      },
-     "execution_count": 448,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
        "4                      0.357  "
       ]
      },
-     "execution_count": 449,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
        "4             5  Switzerland  7.487"
       ]
      },
-     "execution_count": 451,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
        "4                      0.298  "
       ]
      },
-     "execution_count": 452,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1221,7 @@
        "4             5       Netherlands  7.488"
       ]
      },
-     "execution_count": 453,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
        "4             5  Netherlands  7.488"
       ]
      },
-     "execution_count": 454,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
        "4       Canada          5       7.427        6.0       7.404"
       ]
      },
-     "execution_count": 457,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1569,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1803,7 @@
        "4       7.316           7.0  7.328  "
       ]
      },
-     "execution_count": 466,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1814,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1824,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1879,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1889,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2017,7 +2017,7 @@
        "4       7.316        7.0       7.328        9.0       7.278  "
       ]
      },
-     "execution_count": 471,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2157,7 +2157,7 @@
        "4       7.316        7.0       7.328        9.0       7.278  "
       ]
      },
-     "execution_count": 472,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2169,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2179,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2307,7 +2307,7 @@
        "4       7.316          7       7.328          9       7.278  "
       ]
      },
-     "execution_count": 474,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2322,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2365,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2374,12 +2374,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export file into a cleaned dataset csv file\n",
-    "file_path = 'C:/Users/valra/Repository/MONU_project1/Cleaned_Datasets/cleaned_happiness_index.csv'\n",
+    "file_path = 'Cleaned_Datasets/cleaned_happiness_index.csv'\n",
     "happiness_index.to_csv(file_path, index=False)"
    ]
   }
